--- a/Core.Service/Core.Service.csproj
+++ b/Core.Service/Core.Service.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Model\Core.Model.csproj" />
+    <ProjectReference Include="..\Core.ViewModel\Core.ViewModel.csproj" />
   </ItemGroup>
 
 </Project>
