--- a/Core.Admin/Core.Admin.csproj
+++ b/Core.Admin/Core.Admin.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>1b5dc715-d87c-48ab-bb27-fc515a9a045b</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
