--- a/Core.Admin/appsettings.json
+++ b/Core.Admin/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "ApiUrl": "https://localhost:44367/Attachments/",
   "ConnectionStrings": {
     "SqlCon": "Server=.;Database=AlmobDB;Trusted_Connection=True;"
 
