--- a/Core.Api/appsettings.json
+++ b/Core.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "AppSettings": {
+    "Secret": "bGFyYUBnbWFpbC5jb206MTIzNDU2OjkvMjAvMjAyMQ==",
+    "ValidAudience": "https://localhost:44367",
+    "ValidIssuer": "https://localhost:44367"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
