image in problem

--- a/Core.Admin/Core.Admin.csproj
+++ b/Core.Admin/Core.Admin.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -30,6 +30,11 @@
 
   <ItemGroup>
     <Folder Include="Models\ViewModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Attachments\2.jpg" />
+    <None Include="wwwroot\Attachments\a.jpg" />
   </ItemGroup>
 
   <ItemGroup>
