settings,problems,login

--- a/Core.Admin/appsettings.json
+++ b/Core.Admin/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AppSettings": {
+    "Secret": "bGFyYUBnbWFpbC5jb206MTIzNDU2OjkvMjAvMjAyMQ==",
+    "ValidAudience": "https://localhost:44367",
+    "ValidIssuer": "https://localhost:44367",
+    "ImagePath": "https://localhost:44367/Attachments/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,7 +13,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiUrl": "https://localhost:44367/Attachments/",
+
+  "AdminUrl": "https://localhost:44367/",
   "ConnectionStrings": {
     "SqlCon": "Server=.;Database=AlmobDB;Trusted_Connection=True;"
 
