--- a/Core.Api/appsettings.json
+++ b/Core.Api/appsettings.json
@@ -2,7 +2,8 @@
   "AppSettings": {
     "Secret": "bGFyYUBnbWFpbC5jb206MTIzNDU2OjkvMjAvMjAyMQ==",
     "ValidAudience": "https://localhost:44367",
-    "ValidIssuer": "https://localhost:44367"
+    "ValidIssuer": "https://localhost:44367",
+    "ImagePath": "https://localhost:44367/Attachments/"
   },
   "Logging": {
     "LogLevel": {
