--- a/Core.ViewModel/Core.ViewModel.csproj
+++ b/Core.ViewModel/Core.ViewModel.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Model\Core.Model.csproj" />
+  </ItemGroup>
+
 </Project>
